fix: :lipstick: Overflow hidden.
Stop UI from scrolling into out-of-view nav menu.

--- a/app/components/molecules/nav/nav.css
+++ b/app/components/molecules/nav/nav.css
@@ -5,6 +5,7 @@
 	padding: var(--spacing-nav) var(--grid-margin);
 	background: var(--color-background-dark);
 	color: var(--color-text-base-inverse);
+	position: relative;
 }
 
 .logo {
