--- a/app/global.css
+++ b/app/global.css
@@ -8,6 +8,11 @@ html {
 	}
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 a {
 	color: var(--color-text-base);
 	font-weight: var(--font-weight-anchor);
